WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60149
[EFL] Added error check for _ewk_init_body result.
https://bugs.webkit.org/show_bug.cgi?id=60149
Summary
[EFL] Added error check for _ewk_init_body result.
Tomasz Morawski
Reported
2011-05-04 02:37:44 PDT
The ewk_init function should be failed when _ewk_init_body function return false.
Attachments
Patch
(1.03 KB, patch)
2011-05-04 02:38 PDT
,
Tomasz Morawski
no flags
Details
Formatted Diff
Diff
Fixed patch
(1.08 KB, patch)
2011-05-04 03:04 PDT
,
Tomasz Morawski
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tomasz Morawski
Comment 1
2011-05-04 02:38:26 PDT
Created
attachment 92205
[details]
Patch
Tomasz Morawski
Comment 2
2011-05-04 02:42:58 PDT
Change platform
Eric Seidel (no email)
Comment 3
2011-05-04 02:49:06 PDT
Attachment 92205
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/efl/ChangeLog', u'Source/Web..." exit_code: 1 Source/WebKit/efl/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tomasz Morawski
Comment 4
2011-05-04 03:04:15 PDT
Created
attachment 92209
[details]
Fixed patch
Gyuyoung Kim
Comment 5
2011-05-04 03:09:53 PDT
LGTM.
Kenneth Rohde Christiansen
Comment 6
2011-05-04 03:46:12 PDT
Comment on
attachment 92209
[details]
Fixed patch I guess that is ok
Gyuyoung Kim
Comment 7
2011-05-04 04:27:33 PDT
Lucas, How do you think about this patch ?
Lucas De Marchi
Comment 8
2011-05-04 14:48:17 PDT
Comment on
attachment 92209
[details]
Fixed patch LGTM
WebKit Commit Bot
Comment 9
2011-05-04 16:34:16 PDT
Comment on
attachment 92209
[details]
Fixed patch Clearing flags on attachment: 92209 Committed
r85804
: <
http://trac.webkit.org/changeset/85804
>
WebKit Commit Bot
Comment 10
2011-05-04 16:34:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug